--- a/config.toml
+++ b/config.toml
@@ -45,22 +45,27 @@ copyright = "&copy; Copyright 2018 xuchengpeng"
   series = "series"
 
 [[menu.main]]
-  name = "分类"
+  name = "归档"
   weight = 1
+  identifier = "archives"
+  url = "/archives/"
+[[menu.main]]
+  name = "分类"
+  weight = 2
   identifier = "categories"
   url = "/categories/"
 [[menu.main]]
   name = "标签"
-  weight = 2
+  weight = 3
   identifier = "tags"
   url = "/tags/"
 [[menu.main]]
   name = "留言"
-  weight = 3
+  weight = 4
   identifier = "guestbook"
   url = "/guestbook/"
 [[menu.main]]
   name = "关于"
-  weight = 4
+  weight = 5
   identifier = "about"
   url = "/about/"
