--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en"
 title = "xuchengpeng"
 theme = "minos"
 paginate = "10"
+hasCJKLanguage = true
 
 pygmentsCodefences = true
 pygmentsUseClasses = true
