Customize deploy process.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: go
+sudo: required
 
 addons:
   apt:
@@ -11,15 +12,8 @@ script:
   - hugo
 
 after_script:
-  - cd ./public
-  - git init
-  - git config user.name "xuchengpeng"  #修改name
-  - git config user.email "330476629@qq.com"  #修改email
-  - git add .
-  - git commit -m "Site updated"
-  - git push --force --quiet "https://${TRAVIS_TOKEN}@${GH_REF}" master:master  #TRAVIS_TOKEN是在Travis中配置token的名称
-
-sudo: required
+  - chmod +x ./deploy.sh
+  - ./deploy.sh
 
 branches:
   only:
