--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ addons:
     update: true
 
 install:
-  - go get -v github.com/gohugoio/hugo
+  - mkdir $HOME/src
+  - cd $HOME/src
+  - git clone https://github.com/gohugoio/hugo.git
+  - cd hugo
+  - go install --tags extended
 
 script:
   - hugo
