--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ branches:
 
 env:
  global:
-   - GH_REF: github.com/xuchengpeng/xuchengpeng.github.io.git # GitHub博客仓库的地址
+   - GH_REF: github.com/xuchengpeng/hugo-blog.git # GitHub博客仓库的地址
