--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,11 @@ jobs:
     steps:
       - name: Check out hugo-blog
         uses: actions/checkout@v2
-      - name: Checkout PaperMod
-        run: git clone https://github.com/adityatelange/hugo-PaperMod.git themes/PaperMod
-      - name: Delete .git
-        run: rm -rf themes/PaperMod/.git
+      - name: Delete All Themes
+        uses: rm -rf themes/PaperMod themes/minos themes/whiteplain
       - name: Add PaperMod
-        run: git config user.name "xuchengpeng" && git config user.email "330476629@qq.com" && git add . && git commit -m "add PaperMod d3d90be"
+        run: git submodule add --depth=1 https://github.com/adityatelange/hugo-PaperMod.git themes/PaperMod
+      - name: Add PaperMod
+        run: git config user.name "xuchengpeng" && git config user.email "330476629@qq.com" && git add . && git commit -m "add PaperMod submodule"
       - name: Upload
         run: git push
