--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,13 +14,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Config git
         run: git config user.name "xuchengpeng" && git config user.email "330476629@qq.com"
-      - name: Delete All Themes
-        run: rm -rf themes/PaperMod themes/minos themes/whiteplain
-      - name: Delete commit
-        run: git add . && git commit -m "delete all themes"
-      - name: Add PaperMod
-        run: git submodule add --depth=1 https://github.com/adityatelange/hugo-PaperMod.git themes/PaperMod
-      - name: Add PaperMod
-        run:  git add . && git commit -m "add PaperMod submodule"
-      - name: Upload
-        run: git push
+      - name: Clone submodule
+        run: git submodule update --init --recursive
+      - name: Update submodule
+        run: git submodule update --remote --merge
