--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,7 @@ jobs:
         run: git config user.name "xuchengpeng" && git config user.email "330476629@qq.com"
       - name: Clone submodule
         run: git submodule update --init --recursive
-      - name: Update submodule
-        run: git submodule update --remote --merge
-      - name: Custom theme
-        run: cp custom/* themes/PaperMod/layouts/partials
-      - name: Build
+      - name: Build site
         run: hugo --minify
       - name: Create cname file
         run: echo 'xuchengpeng.github.io' > public/CNAME
