--- a/config.yml
+++ b/config.yml
@@ -94,7 +94,7 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com/xuchengpeng/hugo-blog/tree/master/content"
+    URL: "https://github.com/xuchengpeng/xuchengpeng.github.io/tree/main/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
