--- a/config.yml
+++ b/config.yml
@@ -3,23 +3,25 @@ title: "Chuck"
 paginate: 5
 theme: PaperMod
 
+enableInlineShortcodes: true
 enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
 buildExpired: false
+enableEmoji: true
 
 minify:
   disableXML: true
-  minifyOutput: true
+  # minifyOutput: true
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: ExampleSite
-  description: "ExampleSite description"
+  title: Chuck
+  description: "Valar Morghulis. Valar Dohaeris."
   keywords: [Blog, Portfolio, PaperMod]
   author: Chuck
   # author: ["Me", "You"] # multiple authors
-  images: ["<link or path of image for opengraph, twitter-cards>"]
+  # images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
   defaultTheme: auto # dark, light
   disableThemeToggle: false
@@ -40,14 +42,14 @@ params:
   showtoc: true
   tocopen: false
 
-  assets:
+  # assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
-    favicon: "<link / abs url>"
-    favicon16x16: "<link / abs url>"
-    favicon32x32: "<link / abs url>"
-    apple_touch_icon: "<link / abs url>"
-    safari_pinned_tab: "<link / abs url>"
+    # favicon: "<link / abs url>"
+    # favicon16x16: "<link / abs url>"
+    # favicon32x32: "<link / abs url>"
+    # apple_touch_icon: "<link / abs url>"
+    # safari_pinned_tab: "<link / abs url>"
 
   label:
     text: "Chuck"
@@ -80,13 +82,13 @@ params:
     - name: Rss
       url: "index.xml"
 
-  analytics:
-    google:
-      SiteVerificationTag: "XYZabc"
-    bing:
-      SiteVerificationTag: "XYZabc"
-    yandex:
-      SiteVerificationTag: "XYZabc"
+  # analytics:
+  #   google:
+  #     SiteVerificationTag: "XYZabc"
+  #   bing:
+  #     SiteVerificationTag: "XYZabc"
+  #   yandex:
+  #     SiteVerificationTag: "XYZabc"
 
   cover:
     hidden: true # hide everywhere but not in structured data
@@ -119,28 +121,44 @@ params:
     placeholder: 'Leave your comments here...'
     visitor: true
 
-menu:
-  main:
-    - identifier: archives
-      name: "Archives"
-      url: /archives/
-      weight: 1
-    - identifier: search
-      name: "Search"
-      url: /search/
-      weight: 2
-    - identifier: categories
-      name: "Categories"
-      url: /categories/
-      weight: 10
-    - identifier: tags
-      name: "Tags"
-      url: /tags/
-      weight: 20
-    - identifier: about
-      name: "About"
-      url: /about/
-      weight: 30
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
+
+
+languages:
+  en:
+    languageName: "English"
+    weight: 1
+    taxonomies:
+      category: categories
+      tag: tags
+      series: series
+    menu:
+      main:
+        - identifier: archives
+          name: "Archives"
+          url: /archives/
+          weight: 10
+        - identifier: search
+          name: "Search"
+          url: /search/
+          weight: 20
+        - identifier: categories
+          name: "Categories"
+          url: /categories/
+          weight: 30
+        - identifier: tags
+          name: "Tags"
+          url: /tags/
+          weight: 40
+        - identifier: about
+          name: "About"
+          url: /about/
+          weight: 50
+
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
 markup:
