--- a/config.yml
+++ b/config.yml
@@ -41,6 +41,7 @@ params:
   hideSummary: false
   showtoc: true
   tocopen: false
+  hideFooter: true
 
   # assets:
     # disableHLJS: true # to disable highlight.js
